indexes with fake data (OK)

--- a/B2BApp.DataAccess/B2BApp.DataAccess.csproj
+++ b/B2BApp.DataAccess/B2BApp.DataAccess.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\B2BApp.Core\B2BApp.Core.csproj" />
     <ProjectReference Include="..\B2BApp.Entities\B2BApp.Entities.csproj" />
-    <ProjectReference Include="..\Core\B2BApp.Core.csproj" />
   </ItemGroup>
 
 
