--- a/B2BApp.Business/B2BApp.Business.csproj
+++ b/B2BApp.Business/B2BApp.Business.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataAccess\B2BApp.DataAccess.csproj" />
+    <ProjectReference Include="..\B2BApp.DataAccess\B2BApp.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
