--- a/B2BApp.Business/B2BApp.Business.csproj
+++ b/B2BApp.Business/B2BApp.Business.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\B2BApp.DataAccess\B2BApp.DataAccess.csproj" />
+    <ProjectReference Include="..\B2BApp.DTOs\B2BApp.DTOs.csproj" />
   </ItemGroup>
 
 </Project>
