--- a/B2BApp.DTOs/B2BApp.DTOs.csproj
+++ b/B2BApp.DTOs/B2BApp.DTOs.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MongoDB.Bson" Version="2.26.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\B2BApp.Entities\B2BApp.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
