--- a/B2BApp.Api/B2BApp.Api.csproj
+++ b/B2BApp.Api/B2BApp.Api.csproj
@@ -15,7 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="web.config" />
+    <None Include="web.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
