--- a/B2BApp.Api/appsettings.json
+++ b/B2BApp.Api/appsettings.json
@@ -9,5 +9,10 @@
   "MongoDbConnectionString": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "B2BDemo"
+  },
+  "Jwt": {
+    "Issuer": "b2bapp.com",
+    "Audience": "b2bapp.com",
+    "Key": "sK9p#G4h^U6r@L2t$P5n!W8qAzCbDeF7gH*jM1l3oV8xY5z,sK9p#G4h^U6r@L2t$P5n!W8qAzCbDeF7gH*jM1l3oV8xY5z,"
   }
 }
