--- a/B2BApp.Web/B2BApp.Web.csproj
+++ b/B2BApp.Web/B2BApp.Web.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\B2BApp.DTOs\B2BApp.DTOs.csproj" />
     <ProjectReference Include="..\B2BApp.Entities\B2BApp.Entities.csproj" />
+    <ProjectReference Include="..\B2BApp.Models\B2BApp.Models.csproj" />
   </ItemGroup>
 
 </Project>
