urnlere satış fiyatı eklendi api url si değişti

--- a/B2BApp.Web/web.config
+++ b/B2BApp.Web/web.config
@@ -10,7 +10,7 @@
 
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\B2BApp.Api.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess">
+      <aspNetCore processPath="dotnet" arguments=".\B2BApp.Web.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" >
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
         </environmentVariables>
