--- a/B2BApp.Api/web.config
+++ b/B2BApp.Api/web.config
@@ -2,6 +2,11 @@
 <configuration>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
+      <security>
+        <requestFiltering>
+          <requestLimits maxAllowedContentLength="2147483648" />
+        </requestFiltering>
+      </security>
       <modules>
         <remove name="WebDAVModule" />
       </modules>
