--- a/B2BApp.Web/B2BApp.Web.csproj
+++ b/B2BApp.Web/B2BApp.Web.csproj
@@ -24,4 +24,11 @@
     <ProjectReference Include="..\B2BApp.Models\B2BApp.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\SubeStok\SubeStokDurumTest.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
