--- a/B2BApp.Api/appsettings.json
+++ b/B2BApp.Api/appsettings.json
@@ -1,18 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "MongoDbConnectionString": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "B2BDemo"
+    },
+    "Jwt": {
+        "Issuer": "b2bapp.com",
+        "Audience": "b2bapp.com",
+        "Key": "sK9p#G4h^U6r@L2t$P5n!W8qAzCbDeF7gH*jM1l3oV8xY5z,sK9p#G4h^U6r@L2t$P5n!W8qAzCbDeF7gH*jM1l3oV8xY5z,"
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=OGUZHAN-OZTURK\\SQLEXPRESS;Initial Catalog=test;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+
+        //"ApplicationDbContextConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SeyhanlarDemo;Integrated Security=True;Connect Timeout=30;Encrypt=False;"
     }
-  },
-  "AllowedHosts": "*",
-  "MongoDbConnectionString": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "B2BDemo"
-  },
-  "Jwt": {
-    "Issuer": "b2bapp.com",
-    "Audience": "b2bapp.com",
-    "Key": "sK9p#G4h^U6r@L2t$P5n!W8qAzCbDeF7gH*jM1l3oV8xY5z,sK9p#G4h^U6r@L2t$P5n!W8qAzCbDeF7gH*jM1l3oV8xY5z,"
-  }
 }
