--- a/B2BApp.DataAccess/B2BApp.DataAccess.csproj
+++ b/B2BApp.DataAccess/B2BApp.DataAccess.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.26.0" />
   </ItemGroup>
