--- a/B2BApp.Api/appsettings.json
+++ b/B2BApp.Api/appsettings.json
@@ -15,9 +15,9 @@
         "Audience": "b2bapp.com",
         "Key": "sK9p#G4h^U6r@L2t$P5n!W8qAzCbDeF7gH*jM1l3oV8xY5z,sK9p#G4h^U6r@L2t$P5n!W8qAzCbDeF7gH*jM1l3oV8xY5z,"
     },
-    "ConnectionStrings": {
-        "DefaultConnection": "Data Source=OGUZHAN-OZTURK\\SQLEXPRESS;Initial Catalog=test;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=OGUZHAN-OZTURK\\SQLEXPRESS;Initial Catalog=b2bTest;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
 
-        //"ApplicationDbContextConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SeyhanlarDemo;Integrated Security=True;Connect Timeout=30;Encrypt=False;"
-    }
+    //"ApplicationDbContextConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SeyhanlarDemo;Integrated Security=True;Connect Timeout=30;Encrypt=False;"
+  }
 }
