web tarafına kod controllerden istek atmak için kodlar eklendi

--- a/B2BApp.Web/appsettings.json
+++ b/B2BApp.Web/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Config": {
+    "ip": "localhost",
+    "port": "5109",
+    "usessl": false,
+    "startpath": "api"
+
+  }
 }
