Refactor attributes, update Swagger, and improve HttpService
- Reordered attributes in AuthController.cs, commented out [Authorize]
- Modified Program.cs to always use Swagger and SwaggerUI
- Added new constructor to Result<T> in Result.cs, made Data nullable
- Replaced HttpClient setup in AccountController.cs with HttpService.Request
- Added overload to HttpService.Request, updated method for generics and JSON
- Commented out app.UseHttpsRedirection() in Program.cs
- Updated appsettings.json: changed port to 44369, set usessl to true
- Performed additional comments and code cleanup for readability

--- a/B2BApp.Web/appsettings.json
+++ b/B2BApp.Web/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "Config": {
     "ip": "localhost",
-    "port": "5109",
-    "usessl": false,
+    "port": "44369",
+    "usessl": true,
     "startpath": "api"
 
   }
